# portfolio-online-cinema

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.db
app/: main.py
app/core/: config.py
app/crud/: accounts.py  cart.py  movies.py  orders.py  payments.py
app/db/: session.py
app/models/: accounts.py  cart.py  movies.py  orders.py  payments.py
app/routes/: auth.py  cart.py  certifications.py  movies.py  orders.py  payments.py  users.py  webhook.py
app/schemas/: accounts.py  cart.py  movies.py  orders.py  payments.py  users.py
app/tasks/: cleanup.py
app/utils/: auth.py  email.py
migrations/: env.py
migrations/versions/: aa701eaef069_add_accounts_schema.py  f3aeaac62028_initial_schema.py
tests/: conftest.py  test_auth.py  test_cart.py  test_certifications.py  test_movies.py  test_orders.py  test_payments.py  test_users.py  test_webhook.py
