[tool.poetry]
name = "portfolio-online-cinema"
version = "0.1.0"
description = "Online Cinema API (FastAPI portfolio project)"
authors = ["Bondarenko Kirill <bku089@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

fastapi = "^0.125.0"
uvicorn = "^0.38.0"

sqlalchemy = "2.0.30"

aiosqlite = "^0.22"
python-dotenv = "^1.2"

python-jose = "^3.5"
passlib = "^1.7"
bcrypt = "4.0.1"

stripe = "^14.1"
fastapi-mail = "^1.6"

pydantic = "^2.12"
pydantic-settings = "^2.12"
python-multipart = "^0.0.21"

redis = "^7.1"
celery = "^5.6"
aiosmtplib = "^5.0"
asyncpg = "^0.31.0"
alembic = "1.13.1"
psycopg2-binary = "2.9.11"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-asyncio = "^1.3"
httpx = "^0.28"

black = "^25.12"
flake8 = "^7.3"
mypy = "^1.19"
coverage = "^7.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
